1830
It works, with a slightly different syntax:

{code}
import Predef.{any2stringadd => _}

class Foo {
  (new Object) + ""
}
{code}

The output:

{code}
hiding.scala:4: error: value + is not a member of java.lang.Object
  (new Object) + ""
               ^
one error found
{code}
